// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for maxNumberOfPageLinks: { base: 5, xs: 7, s: 5, m: 7, l: 5, xl: 7 } and theme: dark 1`] = `
":host {
  display: block;
  outline: 0 !important;
}
:host([hidden]) {
  display: none;
}
nav {
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 0;
  counter-reset: size 5;
}
ul {
  display: flex;
  gap: 8px;
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
li:first-child {
  margin-right: 8px;
}
li:last-child {
  margin-left: 8px;
}
span {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: color var(--p-transition-duration, .24s) ease;
  position: relative;
  width: 2.5rem;
  height: 2.5rem;
  box-sizing: border-box;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  cursor: pointer;
  color: #FBFCFF;
  outline: 0;
  border-radius: 4px;
}
span:focus::before {
  content: "";
  position: absolute;
  color: #FBFCFF;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 4px;
}
span[aria-current]:focus::before {
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
span:focus:not(:focus-visible)::before {
  border-color: transparent;
}
span[aria-disabled] {
  cursor: default;
  pointer-events: none;
  color: #7E7F82;
}
span[aria-current] {
  cursor: default;
  pointer-events: none;
  color: #FBFCFF;
  border: 2px solid #FBFCFF;
}
@media(min-width:480px) {
  nav {
    counter-reset: size 7;
  }
}

@media(min-width:760px) {
  nav {
    counter-reset: size 5;
  }
}

@media(min-width:1000px) {
  nav {
    counter-reset: size 7;
  }
}

@media(min-width:1300px) {
  nav {
    counter-reset: size 5;
  }
}

@media(min-width:1760px) {
  nav {
    counter-reset: size 7;
  }
}

@media(hover:hover) {
  span:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.ellipsis {
  cursor: default;
  pointer-events: none;
}
.ellipsis::after {
  content: "…";
}
.ellipsis:focus::before {
  border-color: transparent;
}"
`;

exports[`getComponentCss() should return correct css for maxNumberOfPageLinks: 5 and theme: dark 1`] = `
":host {
  display: block;
  outline: 0 !important;
}
:host([hidden]) {
  display: none;
}
nav {
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 0;
  counter-reset: size 5;
}
ul {
  display: flex;
  gap: 8px;
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
li:first-child {
  margin-right: 8px;
}
li:last-child {
  margin-left: 8px;
}
span {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: color var(--p-transition-duration, .24s) ease;
  position: relative;
  width: 2.5rem;
  height: 2.5rem;
  box-sizing: border-box;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  cursor: pointer;
  color: #FBFCFF;
  outline: 0;
  border-radius: 4px;
}
span:focus::before {
  content: "";
  position: absolute;
  color: #FBFCFF;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 4px;
}
span[aria-current]:focus::before {
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
span:focus:not(:focus-visible)::before {
  border-color: transparent;
}
span[aria-disabled] {
  cursor: default;
  pointer-events: none;
  color: #7E7F82;
}
span[aria-current] {
  cursor: default;
  pointer-events: none;
  color: #FBFCFF;
  border: 2px solid #FBFCFF;
}
@media(hover:hover) {
  span:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.ellipsis {
  cursor: default;
  pointer-events: none;
}
.ellipsis::after {
  content: "…";
}
.ellipsis:focus::before {
  border-color: transparent;
}"
`;

exports[`getComponentCss() should return correct css for maxNumberOfPageLinks: 5 and theme: light 1`] = `
":host {
  display: block;
  outline: 0 !important;
}
:host([hidden]) {
  display: none;
}
nav {
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 0;
  counter-reset: size 5;
}
ul {
  display: flex;
  gap: 8px;
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
li:first-child {
  margin-right: 8px;
}
li:last-child {
  margin-left: 8px;
}
span {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: color var(--p-transition-duration, .24s) ease;
  position: relative;
  width: 2.5rem;
  height: 2.5rem;
  box-sizing: border-box;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  cursor: pointer;
  color: #010205;
  outline: 0;
  border-radius: 4px;
}
span:focus::before {
  content: "";
  position: absolute;
  color: #010205;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 4px;
}
span[aria-current]:focus::before {
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
span:focus:not(:focus-visible)::before {
  border-color: transparent;
}
span[aria-disabled] {
  cursor: default;
  pointer-events: none;
  color: #949598;
}
span[aria-current] {
  cursor: default;
  pointer-events: none;
  color: #010205;
  border: 2px solid #010205;
}
@media(hover:hover) {
  span:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.ellipsis {
  cursor: default;
  pointer-events: none;
}
.ellipsis::after {
  content: "…";
}
.ellipsis:focus::before {
  border-color: transparent;
}"
`;

exports[`getComponentCss() should return correct css for maxNumberOfPageLinks: 7 and theme: dark 1`] = `
":host {
  display: block;
  outline: 0 !important;
}
:host([hidden]) {
  display: none;
}
nav {
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 0;
  counter-reset: size 7;
}
ul {
  display: flex;
  gap: 8px;
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
li:first-child {
  margin-right: 8px;
}
li:last-child {
  margin-left: 8px;
}
span {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: color var(--p-transition-duration, .24s) ease;
  position: relative;
  width: 2.5rem;
  height: 2.5rem;
  box-sizing: border-box;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  cursor: pointer;
  color: #FBFCFF;
  outline: 0;
  border-radius: 4px;
}
span:focus::before {
  content: "";
  position: absolute;
  color: #FBFCFF;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 4px;
}
span[aria-current]:focus::before {
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
span:focus:not(:focus-visible)::before {
  border-color: transparent;
}
span[aria-disabled] {
  cursor: default;
  pointer-events: none;
  color: #7E7F82;
}
span[aria-current] {
  cursor: default;
  pointer-events: none;
  color: #FBFCFF;
  border: 2px solid #FBFCFF;
}
@media(hover:hover) {
  span:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.ellipsis {
  cursor: default;
  pointer-events: none;
}
.ellipsis::after {
  content: "…";
}
.ellipsis:focus::before {
  border-color: transparent;
}"
`;

exports[`getComponentCss() should return correct css for maxNumberOfPageLinks: 7 and theme: light 1`] = `
":host {
  display: block;
  outline: 0 !important;
}
:host([hidden]) {
  display: none;
}
nav {
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 0;
  counter-reset: size 7;
}
ul {
  display: flex;
  gap: 8px;
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
li:first-child {
  margin-right: 8px;
}
li:last-child {
  margin-left: 8px;
}
span {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: color var(--p-transition-duration, .24s) ease;
  position: relative;
  width: 2.5rem;
  height: 2.5rem;
  box-sizing: border-box;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  cursor: pointer;
  color: #010205;
  outline: 0;
  border-radius: 4px;
}
span:focus::before {
  content: "";
  position: absolute;
  color: #010205;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 4px;
}
span[aria-current]:focus::before {
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
span:focus:not(:focus-visible)::before {
  border-color: transparent;
}
span[aria-disabled] {
  cursor: default;
  pointer-events: none;
  color: #949598;
}
span[aria-current] {
  cursor: default;
  pointer-events: none;
  color: #010205;
  border: 2px solid #010205;
}
@media(hover:hover) {
  span:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.ellipsis {
  cursor: default;
  pointer-events: none;
}
.ellipsis::after {
  content: "…";
}
.ellipsis:focus::before {
  border-color: transparent;
}"
`;
